K8S/minIO/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: csmvck8s-ns
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: api
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: console
